5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1836_1277.log
== TEST (2019-06-25 11:37:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

for i in range(7):
	mat[i,j] = (a,b)
	
print(a,b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

for i in range(7):
	for j in range(7):
	mat[i,j] = (a,b)
	
print(a,b)


-- ERROR:
File "XXXX", line 16
    mat[i,j] = (a,b)
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

for i in range(7):
	for j in range(7):
		mat[i,j] = (a,b)
	
print(a,b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:44:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a1 = (a/111) - 1
b1 = (b/111)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a1 = (a/111) - 1
b1 = (b/111)

print(m[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a1 = (a/111) - 1
b1 = (b/111)

print(m[a1,b1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a1 = (a/111) - 1
b1 = (b/111) - 1

print(m[a1,b1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:46:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a1 = (a//111) - 1
b1 = (b//111) - 1

print(m[a1,b1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:47:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("insira o numero do viao:"))
b = int(input("insira o numero do oto viao:"))

m = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
#tranformar em inteiro pela matriz
a1 = (a//111) - 1
b1 = (b//111) - 1

print(m[a1,b1])

-- EXECUTION TIME:
1.08989
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
